--- a/styles.css
+++ b/styles.css
@@ -205,13 +205,14 @@ h2, .page-title {
 
 .hero-banner { 
   overflow: hidden; 
-  width: 80%;
-  height: 700px;
+  width: 100%;
+  height: 600px;
+  padding: 50px 60px;
 
 }
 
 .slider {
-  width: 80%;
+  width: 100%;
   overflow: hidden;
   
 }
