--- a/Backend/public/css/style.css
+++ b/Backend/public/css/style.css
@@ -33,7 +33,7 @@ a {
 .main-content {
   max-width: 1550px;
   margin: 0 auto;
-  padding-top: 20px;
+  padding-top: 0;
 }
 
 /* ----------------------- JUDUL HALAMAN ----------------------- */
@@ -225,9 +225,9 @@ h2, .page-title {
 .hero-banner { 
   overflow: hidden; 
   width: 100%;
-  height: 600px;
-  padding: 50px 60px;
-
+  height: 450px;
+  padding: 0;
+  margin: 0;
 }
 
 .slider {
@@ -253,10 +253,12 @@ h2, .page-title {
 
 .slide img {
   width: 100%;
-  height: auto;
+  height: 450px;
   object-fit: cover;
   object-position: top center;
-  opacity: 50%;
+  opacity: 100%;
+  filter: contrast(1.1) brightness(1.05);
+  display: block;
 }
 
 @keyframes slide {
