--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ a {
 .main-content {
   max-width: 1550px;
   margin: 0 auto;
-  padding-top: 20px;
+  padding-top: 0;
 }
 
 /* ----------------------- JUDUL HALAMAN ----------------------- */
@@ -205,10 +205,10 @@ h2, .page-title {
 
 .hero-banner { 
   overflow: hidden; 
-  width: 100%;
-  height: 600px;
-  padding: 50px 60px;
-
+  width: 600vw;
+  height: 100vh;
+  padding: 0;
+  margin-left: calc(-50vw + 50%);
 }
 
 .slider {
@@ -230,14 +230,17 @@ h2, .page-title {
   flex-shrink: 0;
   justify-content: center;
   align-items: center;
+  margin: 0;
+  padding: 0;
 }
 
 .slide img {
-  width: 100%;
-  height: auto;
+  width: 100vw;
+  height: 600px;
   object-fit: cover;
-  object-position: top center;
-  opacity: 50%;
+  object-position: center;
+  opacity: 100%;
+  display: block;
 }
 
 @keyframes slide {
@@ -259,7 +262,7 @@ h2, .page-title {
 /* Card Grid */
 .agenda-section {
   background-color: #27306d;
-  padding: 70px 80px;
+  padding: 120px 80px 70px 80px;
 }
 
 .agenda-section h2 {
@@ -391,6 +394,7 @@ h2, .page-title {
   width: 100%;
   height: auto;
   flex-shrink: 0;
+  filter: contrast(1.1) brightness(1.05);
 }
 
 /* PANAH */
@@ -762,6 +766,7 @@ h2, .page-title {
 .logo-row img {
   height: 30px;
   object-fit: contain;
+  filter: contrast(1.1) brightness(1.05);
 }
 
 
