--- a/BACKEND/public/css/style.css
+++ b/BACKEND/public/css/style.css
@@ -1840,13 +1840,13 @@ html {
 
 .struktur-btn-card:hover {
   transform: translateY(-3px);
-  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 6px 16px rgba(0,0,0,0.15);
 }
 
 .struktur-btn-card.active {
   background: red;
   color: white;
-  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 6px 16px rgba(0,0,0,0.2);
 }
 
 /* hide & show struktur */
