--- a/BACKEND/public/css/style.css
+++ b/BACKEND/public/css/style.css
@@ -1852,10 +1852,22 @@ html {
 /* hide & show struktur */
 .struktur {
   display: none;
+  animation: fadeIn 0.5s ease-in-out;
 }
 
 .struktur.active {
   display: block;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 
