--- a/Backend/public/css/style.css
+++ b/Backend/public/css/style.css
@@ -718,8 +718,8 @@ h2,
   padding: 20px;
   width: 300px;
   min-height: 250px;
-  background: white;
-  color: #333;
+  background: #27306d;
+  color: white;
   margin-right: 20px;
   border-radius: 10px;
   text-align: center;
